# LLM_Ops

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  yoda_finetuning_pipeline.json  yoda_finetuning_pipeline.yaml
.claude/: settings.local.json
notebooks/: test_finetuning.ipynb
notebooks/logs/: events.out.tfevents.1760625294.Madeleine-Matcha.local.99111.0
scripts/: pipeline_runner.py  validate_gcp_setup.py
src/: constants.py
src/pipeline_components/: data_transformation_component.py
src/pipelines/: model_training_pipeline.py
