[project]
name = "llm-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "gcsfs>=2025.9.0",
    "google-cloud-aiplatform>=1.120.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=2.19.0",
    "pandas>=2.3.3",
    "peft==0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers~=4.46.0",
    "trl>=0.17.0",
]
